@@ -34,6 +34,11 @@ class PermissionFunctionsClass extends ExtensionClass
 			'url' => self::getFullUrl(__FILE__),			
 		);
 	}
+
+// %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+// Functions which are meant to be accessed through 'ParserPhase2' functionality
+
+
 	public function mg_checkPermission( &$parser, $requiredRight = 'read' )
 	// redirects to the standard 'Permission Error' page if the user lacks the $requiredRight
 	{
@@ -45,6 +50,13 @@ class PermissionFunctionsClass extends ExtensionClass
 		
 		if (!$wgUser->isAllowed( $requiredRight, $ns ) )
 			$wgOut->permissionRequired( $requiredRight );
+	}
+
+	public static function getpermissionline( $group, $namespace )
+	// This function is meant to be used in conjuction with 'Hierarchical Namespace Permission' extension.
+	{
+		if (!class_exists('hnpClass')) return;
+		return hnpClass::getPermissionGroupNamespace( $group, $namespace );
 	}
 
 } // end class.
