@@ -111,4 +111,7 @@ REL1_10_7:
 - ParserPhase2: fixed an issue with $wgParser not setting mTitle property when needed
 - Added 'NS_INTERWIKI' accessible to '*'
 - Fixed page history for revision level policing
+- ForeachFunction: added security through only allowing 'protected' pages
+- Added 'PermissionFunctions' extension
+-
 
